# ImmoScan

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
config/: quartiers.yaml  scoring.yaml  sources.yaml
dags/: __init__.py  dag_digest.py  dag_loyers.py  dag_maintenance.py  dag_ventes.py
deploy/: DEPLOYMENT.md  immoscan-listener.service  immoscan-loyers.service  immoscan-loyers.timer  immoscan-ventes.service  immoscan-ventes.timer
prompts/: enrichment_examples.md  enrichment_system.md  leboncoin_scraper_engineering.md
scripts/: analyze_url.py  backup.sh  deploy.sh  init_db.py  run_loyers.py  run_pipeline_live.py  seed_quartiers.py  setup_vps.sh  telegram_listener.py  test_leboncoin.py  test_pipeline.py
src/: __init__.py  config.py
src/alerts/: __init__.py  formatter.py  telegram_bot.py
src/db/: __init__.py  connection.py  models.py
src/db/migrations/: __init__.py  env.py  script.py.mako
src/enrichment/: __init__.py  claude_enricher.py
src/geo/: __init__.py  geocoder.py  scoring_geo.py
src/monitoring/: __init__.py  health.py
src/observatoire/: __init__.py  loyers.py
src/parsers/: __init__.py  dedup.py  normalizer.py
src/scoring/: __init__.py  composite.py  fiscal.py  rentabilite.py
src/scrapers/: __init__.py  base.py  leboncoin.py  pap.py  seloger.py
src/validation/: __init__.py  validators.py
tests/: __init__.py  conftest.py  test_alerts.py  test_dedup.py  test_enrichment.py  test_integration.py  test_models.py  test_observatoire.py  test_parsers.py  test_scoring.py  test_scrapers.py  test_validators.py
tests/fixtures/: leboncoin_detail.html  leboncoin_listing.html  pap_detail.html  pap_listing.html
