[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "immoscan"
version = "0.1.0"
description = "Outil automatise de detection et scoring d'opportunites d'investissement locatif a Besancon"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "ImmoScan Developer"},
]
dependencies = [
    "scrapling",
    "sqlalchemy[asyncio]>=2.0",
    "alembic",
    "psycopg2-binary",
    "geoalchemy2",
    "pydantic>=2.0",
    "pydantic-settings",
    "httpx",
    "anthropic",
    "python-telegram-bot>=20.0",
    "pyyaml",
    "python-dotenv",
    "apscheduler",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "isort",
    "ruff",
    "factory-boy",
]

[project.scripts]
immoscan = "immoscan.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
