[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "immoscan"
version = "0.1.0"
description = "Outil automatise de detection et scoring d'opportunites d'investissement locatif a Besancon"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ImmoScan Developer"},
]
dependencies = [
    "scrapling",
    "curl_cffi>=0.7",
    "sqlalchemy[asyncio]>=2.0",
    "alembic",
    "psycopg2-binary",
    "geoalchemy2",
    "pydantic>=2.0",
    "pydantic-settings",
    "httpx",
    "anthropic",
    "python-telegram-bot>=20.0",
    "pyyaml",
    "python-dotenv",
    "apscheduler",
]

[project.optional-dependencies]
stealth = [
    "camoufox[geoip]",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "isort",
    "ruff",
    "factory-boy",
]

[project.scripts]
immoscan = "immoscan.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by black)
    "E402",   # module import not at top (needed in scripts/ for sys.path setup)
    "E741",   # ambiguous variable name (single-letter vars in comprehensions)
    "UP045",  # Optional[X] -> X | None (cosmetic, lots of existing code)
    "TC002",  # move third-party import into type-checking block
    "TC003",  # move stdlib import into type-checking block
    "SIM102", # nested if -> single if with and
    "SIM103", # return condition directly
    "SIM105", # try-except-pass -> contextlib.suppress
    "SIM108", # if-else -> ternary
    "B007",   # unused loop variable
    "B905",   # zip without strict=
    "F841",   # unused local variable (pre-existing in parsers)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
